# ezLauncher

./: .gitignore  Cargo.toml  Dioxus.toml  GEMINI.md  README.md
.agent/rules/: behavior.md  dioxus-expert.md  dioxus.md  mcp-and-tools.md  no-modifications.md  tailwind.md
.agent/workflows/: nm.md
assets/: main.css  tailwind.css
assets/css/: custom_scrollbar.css  fonts.css  palette.css
src/: consts.rs  css.rs  fonts.rs  game.rs  logger.rs  main.rs  secrets.example.rs  state.rs
src/components/: login_modal.rs  main_content.rs  main_layout.rs  mod.rs  resize_borders.rs  title_bar.rs
src/components/login/: mod.rs  modal.rs  script.rs
src/scripts/: app_dir.rs  mod.rs  window_size_center.rs
src/scripts/game/: install.rs  java.rs  launch.rs  mod.rs  types.rs  utils.rs
src/scripts/java/: mod.rs
