[package]
name = "ezlauncher"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = [] }
dioxus-core = "0.7.1"
dioxus-desktop = "0.7.1"
dioxus-free-icons = { version = "0.10.0", features = ["lucide", "feather"] }
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
url = "2.5.7"
rand = "0.9.2"
webbrowser = "1.0.6"
sha2 = "0.10.9"
base64 = "0.22.1"
oauth2 = "4.4"
tokio = { version = "1.48.0", features = ["full"] }
log = "0.4.28"
colored = "3.0.0"
zip = "2.2.2"
walkdir = "2.5.0"
tar = "0.4.43"
flate2 = "1.0.35"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
